--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
