--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^6.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
+    "react-cookie-consent": "^7.6.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.1",
     "react-router": "^6.2.1",
