--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mern-stack-crud",
   "version": "0.1.0",
+  "homepage": "https://carlozrodri.github.io/react_front",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -31,6 +32,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -55,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-responsive-select": "^7.0.4"
   }
 }
