changes for seo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 { "name": "Top8.uk",
   "short_name": "Top8.uk",
-  "description": "We got The Best things from Amazon.",
+  "description": "Top8.uk is the ultimate destination for finding the best products available on Amazon. We hand-pick and curate only the best items, so you can be sure that you're getting the best of the best.",
   "icons": [
     {
       "src": "thetop8-pic.ico",
